04_OOD/example/oop/DesignPrinciples/src/com/schonherz/education/oop/design/principles/clazz/solid/ocp/drawing/good/Shape.java
package com.schonherz.education.oop.design.principles.clazz.solid.ocp.drawing.good;

/**
 * Shape class which defines draw method specification without implementation
 * 
 * @author Janos Pelsoczi
 * 
 */
public abstract class Shape {
	abstract void draw();
}
