04_OOD/example/oop/DesignPrinciples/src/com/schonherz/education/oop/design/principles/clazz/solid/ocp/drawing/bad/Circle.java
package com.schonherz.education.oop.design.principles.clazz.solid.ocp.drawing.bad;

/**
 * This class indicates circle shape
 * 
 * @author Janos Pelsoczi
 *
 */
public class Circle extends Shape {
	Circle() {
		super.m_type = 2;
	}
}